--- a/css/index.css
+++ b/css/index.css
@@ -88,7 +88,55 @@ border-bottom:1px solid #52c41a;
 }
 /* 内容区域
 ---------------------------------------------------------------- */
-
+.cont{
+  height:800px;
+}
+.cont .box{
+height:800px;
+}
+.cont .box .ctop{
+  height:76px;
+  line-height:76px;
+  font-size:14px;
+}
+.cont .box .cbott .contleft{
+  float: left;
+}
+.cont .box .cbott .conletop{
+  background-color: #333;
+  text-align: center;
+  line-height:38px;
+}
+.cont .box .cbott .conletop .she1{
+  font-size: 17px;
+  color: #fff;
+  font-weight: bold;
+}
+.cont .box .cbott .conletop .she2{
+  font-size: 17px;
+  color: #fff;
+}
+.cont .box .cbott .conlebot{
+  height:686px;
+  border-left:1px solid #d9d9d9;
+  border-right:1px solid #d9d9d9 ;
+}
+.cont .box .cbott .conlist li{
+   height: 30px;
+   line-height: 30px;
+   padding-left: 27px;
+   box-sizing: border-box;
+   color: #a3a3a3;
+   font-weight: lighter;
+}
+.cont .box .cbott .conlist a{
+ font-size: 15px;
+}
+.cont .box .cbott .contright{
+  float: right;
+  background-color: red;
+  height:724px;
+}
 /* 底部导航
 ---------------------------------------------------------------- */
 .bottom{
